tests/valid/user/lib/lib.s
  .text 
  .global func
func:
  nop
  nop
  nop