tests/invalid/bad_mem.s
  .text

  .global _start
_start:
  sw [rb, 0